Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127593

Docs for min & max camera zoom levels is incorrect

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.8.0 Beta3, 6.9.0 FF
    • 6.8.0
    • Graphs: 3D
    • None
    • 2fc308224 (dev), 2538e2eb5 (6.8)

      Docs state min & max & current are adjusted if something is out of bounds when setting them, but we do not check anything.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes