Check camera zoom bounds

Also, set the far clip for cameras.

Fixes: QTBUG-127593
Change-Id: Ifd5902d145351d3a8e74a5c006b8a420c96d78a6
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sakaria Pouke <sakaria.pouke@qt.io>
(cherry picked from commit 2fc30822499da124995074d5cfe7fabbb751b6cf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>